# humfmt

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md
.github/workflows/: benchmarks.yml  ci.yml  fuzz.yml
benches/: formatter_benches.rs
docs/: CRATE.md
examples/: smoke.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bytes.rs  fuzz_duration.rs  fuzz_list.rs  fuzz_number.rs  fuzz_ordinal.rs  fuzz_percent.rs
src/: error.rs  lib.rs  prelude.rs  rounding.rs
src/ago/: display.rs  mod.rs
src/bytes/: display.rs  format.rs  mod.rs  options.rs  traits.rs
src/chrono/: mod.rs
src/common/: fmt.rs  mod.rs  numeric.rs  sealed.rs
src/duration/: display.rs  format.rs  mod.rs  options.rs  traits.rs
src/list/: display.rs  format.rs  mod.rs  options.rs
src/locale/: custom.rs  english.rs  mod.rs  polish.rs  russian.rs  traits.rs
src/number/: display.rs  format.rs  mod.rs  options.rs  traits.rs
src/ordinal/: display.rs  mod.rs  traits.rs
src/percent/: display.rs  format.rs  mod.rs  options.rs  traits.rs
src/time/: mod.rs
src/traits/: humanize.rs  mod.rs
tests/: ago_format.rs  bytes_format.rs  chrono_integration.rs  custom_locale.rs  duration_format.rs  duration_locale.rs  golden.rs  list_format.rs  number_edge_cases.rs  number_format.rs  ordinal_format.rs  percent_format.rs  polish_locale.rs  property_invariants.rs  russian_locale.rs  time_integration.rs
tools/benchmarks/: Cargo.toml  README.md
tools/benchmarks/benches/: compare_ago.rs  compare_bytes.rs  compare_duration.rs  compare_numbers.rs
tools/benchmarks/src/: lib.rs
