[package]
name = "humfmt"
version = "0.2.0"
edition = "2021"
authors = ["MuXolotl"]
description = "Ergonomic human-readable formatting toolkit for Rust"
license = "MIT"
repository = "https://github.com/MuXolotl/humfmt"
documentation = "https://docs.rs/humfmt"
readme = "README.md"
keywords = ["format", "humanize", "display", "number", "numeric"]
categories = ["value-formatting", "text-processing"]

[features]
# Keep the current feature names stable across pre-1.0 releases, even when some
# of them are still compatibility placeholders. This lets downstream manifests
# stay valid while corresponding APIs land incrementally.
default = ["std", "english"]

# `std` is the only behavior-changing flag today.
std = []

# Placeholder for future finer-grained `alloc` gating.
alloc = []

# Locale flags. English, Russian, and Polish are currently implemented.
english = []
russian = []
polish = []

# Optional ecosystem integration layers.
chrono = ["dep:chrono"]
time = ["dep:time"]

[dependencies]
chrono = { version = "0.4", optional = true, default-features = false }
time = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "formatter_benches"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
