[package]
name = "humfmt"
version = "0.5.0"
edition = "2021"
rust-version = "1.70"
authors = ["MuXolotl"]
description = "Ergonomic human-readable formatting toolkit for Rust"
license = "MIT"
repository = "https://github.com/MuXolotl/humfmt"
documentation = "https://docs.rs/humfmt"
readme = "README.md"
keywords = ["format", "humanize", "display", "number", "numeric"]
categories = ["value-formatting", "text-processing"]

[features]
default = ["std", "english"]

std = []
alloc = []

english = []
russian = []
polish = []

chrono = ["dep:chrono"]
time = ["dep:time"]

[dependencies]
chrono = { version = "0.4", optional = true, default-features = false }
time = { version = ">=0.3, <0.3.42", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "formatter_benches"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
